--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #1e1e1e; /* हल्का काला */
+            color: #fff; /* टेक्स्ट को सफेद */
             margin: 0;
             padding: 0;
-            color: #fff; /* टेक्स्ट को सफेद */
         }
 
         h1 {
@@ -93,6 +93,81 @@
             transform: scale(1.05);
         }
 
+        .popup-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            visibility: hidden;
+            opacity: 0;
+            transition: visibility 0s, opacity 0.3s;
+            border-radius: 10px; /* बैकग्राउंड को हल्का गोल */
+        }
+
+        .popup-overlay.active {
+            visibility: visible;
+            opacity: 1;
+        }
+
+        .popup {
+            background: #222;
+            padding: 20px;
+            border-radius: 15px; /* पॉपअप बॉक्स को गोल */
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        }
+
+        .popup h2 {
+            margin: 0 0 10px;
+        }
+
+        .popup button {
+            margin: 10px;
+            padding: 10px 20px;
+            font-size: 16px;
+            border: none;
+            border-radius: 25px; /* बटन को गोल */
+            cursor: pointer;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .popup .join {
+            background-color: #007bff;
+            color: #fff;
+        }
+
+        .popup .cancel {
+            background-color: #ff0000;
+            color: #fff;
+        }
+
+        .star {
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            background-color: #fff;
+            border-radius: 50%; /* स्टार्स को गोल */
+            box-shadow: 0 0 8px #fff;
+            animation: fly 1s ease-out forwards;
+        }
+
+        @keyframes fly {
+            0% {
+                opacity: 1;
+                transform: translate(0, 0) scale(1);
+            }
+            100% {
+                opacity: 0;
+                transform: translate(calc(-50px + 100px * var(--randomX)), calc(-50px + 100px * var(--randomY))) scale(0.5);
+            }
+        }
+
         @media (max-width: 768px) {
             .channel-card {
                 width: 100px;
@@ -110,7 +185,7 @@
     <div class="channel-container">
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(6).jpeg" alt="TNT Sports">
-            <div class="channel-name" onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream2_240p/playlist.m3u8?vidictid=200582338854&id=6&pk=70249f32865f639710e45a50220971cb8c328520f8948f3379378ccce48fc31a876c3b56445f674b541cc92ef7aea3509e28c730b24856a6cafcfd4a20dbe36a')">TNT Sports</div>
+            <div class="channel-name" onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream3_240p/playlist.m3u8?vidictid=200574049059&id=10&pk=c4c444c85d8b238700b452c8e69a581c914ef6babfd38a00b3e8c9d407b40fa543d523010fae682b2229b13dc1ba240ef54be102e2dce5b645854feca9098f94')">TNT Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(7).jpeg" alt="Star Sports">
@@ -118,7 +193,7 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/596cd9eb7fa44cb082008078.format-webp.width-1440_bJ7uveKWAfmUPxvP.webp" alt="Sky Sports">
-            <div class="channel-name" onclick="playStream('https://64.scjustfor.info/mobile/stream6_240p/playlist.m3u8?vidictid=200583445222&id=21&pk=d0b8f672535bc1ba268906ca5fc8104947bfd07bb0b8f4f72642c580708a4e05')">Sky Sports</div>
+            <div class="channel-name" onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream5_240p/playlist.m3u8?vidictid=20057303193&id=18&pk=c4c444c85d8b238700b452c8e69a581c914ef6babfd38a00b3e8c9d407b40fa543d523010fae682b2229b13dc1ba240ef54be102e2dce5b645854feca9098f94')">Sky Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/3f54a65a0eee4b95612e18e39a85f95a0ecc2202cebe3ca664b70d86f1036378.webp" alt="Willow Cricket">
@@ -155,7 +230,17 @@
         <a href="https://t.me/SportsLiveLink18" class="telegram-link" target="_blank">Join on Telegram</a>
     </div>
 
+    <!-- Popup Overlay -->
+    <div class="popup-overlay" id="popupOverlay">
+        <div class="popup">
+            <h2>For more live links, join our Telegram channel</h2>
+            <button class="join" onclick="createStars(this, 'https://t.me/SportsLiveLink18')">Join</button>
+            <button class="cancel" onclick="closePopup()">Cancel</button>
+        </div>
+    </div>
+
     <script>
+        // Video Player Function
         function playStream(url) {
             var player = document.getElementById('video-player');
             player.style.display = 'block';
@@ -163,6 +248,37 @@
             player.play().catch((error) => {
                 console.error("Error playing video:", error);
             });
+        }
+
+        // Popup Logic
+        window.onload = function() {
+            setTimeout(function() {
+                document.getElementById('popupOverlay').classList.add('active');
+            }, 5000); // Show popup after 1 seconds
+        };
+
+        function closePopup() {
+ document.getElementById('popupOverlay').classList.remove('active');
+        }
+
+        function createStars(button, link) {
+            for (let i = 0; i < 20; i++) {
+                const star = document.createElement('div');
+                star.classList.add('star');
+                star.style.left = `${Math.random() * button.offsetWidth}px`;
+                star.style.top = `${Math.random() * button.offsetHeight}px`;
+                star.style.setProperty('--randomX', Math.random());
+                star.style.setProperty('--randomY', Math.random());
+                button.appendChild(star);
+
+                star.addEventListener('animationend', () => {
+                    star.remove();
+                });
+            }
+
+            setTimeout(() => {
+                window.location.href = link;
+            }, 1000);
         }
     </script>
 </body>
