--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/596cd9eb7fa44cb082008078.format-webp.width-1440_bJ7uveKWAfmUPxvP.webp" alt="Sky Sports">
-            <div class="channel-name" onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream5_240p/playlist.m3u8?vidictid=20057303193&id=18&pk=c4c444c85d8b238700b452c8e69a581c914ef6babfd38a00b3e8c9d407b40fa543d523010fae682b2229b13dc1ba240ef54be102e2dce5b645854feca9098f94')">Sky Sports</div>
+            <div class="channel-name" onclick="playStream('https://mut1.mylife1.top:8088/live/webcrice09/playlist.m3u8?vidictid=200606845249&id=116730&pk=97cf30ed49e067b102b81df2fbe247aa827b56ce71cd9dd670b535c800bffa7b64b6368e153345c22ff2e6c2a6c739f1419d36351cc896156012a7e788ba4a1e')">Sky Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/3f54a65a0eee4b95612e18e39a85f95a0ecc2202cebe3ca664b70d86f1036378.webp" alt="Willow Cricket">
-            <div class="channel-name" onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream9_240p/playlist.m3u8?vidictid=200593806145&id=34&pk=fc1a2d2579c71cb6f672d5ba0f73b11e6f3ba47f0c7f75635a9817ef02d9ef32a7e7d95f53ce99a93054f5b9053906127aa7ab5a544da4c17d1887a1a7d9c032')">Willow Cricket</div>
+            <div class="channel-name" onclick="playStream('https://mut1.mylife1.top:8088/live/webcrict20/playlist.m3u8?vidictid=200602059081&id=118106&pk=97cf30ed49e067b102b81df2fbe247aa827b56ce71cd9dd670b535c800bffa7b64b6368e153345c22ff2e6c2a6c739f1419d36351cc896156012a7e788ba4a1e')">Willow Cricket</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(9).jpeg" alt="PTV Sports">
